# djot-rs

./: .gitignore  Cargo.toml  README.md  readme.md  rustfmt.toml
.github/workflows/: ci.yaml
examples/: errors.rs  iter.rs  strings.rs
lua-patterns/: Cargo.toml  LICENSE.txt
lua-patterns/examples/: multiple_captures.rs  range.rs
lua-patterns/src/: luapat.rs
src/: annot.rs  ast.rs  attribute.rs  block.rs  emoji.rs  errors.rs  html.rs  inline.rs  lib.rs  luapat.rs  main.rs  patterns.rs  sourcegen.rs  to_ast.rs  to_html.rs  tree.rs
src/annot/: generated.rs
src/ast/: generated.rs
src/sourcegen/: annot.rs  ast.rs
tests/: it.rs  spec.rs  tidy.rs
tests/data/: attributes.test  code_blocks.test  emphasis.test  fences.html  fences_djot  hello_world.test  links.djot  links.html  links_and_images.test  para.test  paragraphs.djot  paragraphs.html  verbatim.test
