[package]
name = "djot-rs"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
edition = "2021"

[dependencies]
lua-patterns = "0.4.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"

[dev-dependencies]
xshell = "0.2.0"
