[package]
name = "djot"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.66"
indexmap = { version = "1.9.1", features = ["serde"] }
lexopt = "0.2.1"
lua-patterns = { path = "lua-patterns" }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"

[dev-dependencies]
xshell = "0.2.0"
