[package]
name = "lua-patterns"
version = "0.3.0"
authors = ["steve donovan <steve.j.donovan@gmail.com>"]
description = "Binding to Lua String Patterns"
license = "MIT"
repository = "https://github.com/stevedonovan/lua-patterns"
documentation = "https://docs.rs/lua-patterns"

keywords = ["string","matching","lua"]

categories = ["parsing","api-bindings"]



